--- a/innova-unam/src/views/Home.module.css
+++ b/innova-unam/src/views/Home.module.css
@@ -1,7 +1,7 @@
 main {
     height: 80vh;
-    padding-left: 35vw;
-    padding-right: 35vw;
+    padding-left: 35%;
+    padding-right: 35%;
     background-image: url("fes.jpg");
     background-repeat:no-repeat;
     background-position: top;
@@ -42,6 +42,13 @@ nav a{
 .container{
     height: inherit;
     /* width: 50vw; */
+}
+
+@media (max-width: 1100px) {
+    main{
+        padding-left: 25%;
+        padding-right: 25%;
+    }
 }
 
 @media (max-width: 800px) {
